test/compare/sources/errors/re-declaration.go


package main

import (
	"fmt"
)

func main() {
	x := 1

	x := 2

	fmt.Println(x)
}
